// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ButtonLink /> > renders correctly \`disabled\` 1`] = `
<DocumentFragment>
  <a
    aria-disabled="true"
    class="anchorLink btn btnSecondary btnLg disabled"
    href=""
    role="button"
    tabindex="-1"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> > renders correctly anchor attributes 1`] = `
<DocumentFragment>
  <a
    class="anchorLink btn btnSecondary btnLg"
    data-pressed="true"
    href="https://sourcegraph.com"
    rel="noopener noreferrer"
    tabindex="0"
    target="_blank"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> > renders correctly btn classes 1`] = `
<DocumentFragment>
  <a
    class="anchorLink btn btnSecondary btnLg"
    href="http://example.com"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;

exports[`<ButtonLink /> > renders correctly empty \`to\` 1`] = `
<DocumentFragment>
  <a
    class="anchorLink btn btnSecondary btnLg"
    href=""
    role="button"
    tabindex="0"
  >
    Button link
  </a>
</DocumentFragment>
`;
